--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,19 @@
 spring.application.name=vscode-demo
 # 应用服务 WEB 访问端口
 server.port=8080
+#数据库连接
+spring.datasource.type=com.mysql.cj.jdbc.MysqlConnectionPoolDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql.sqlpub.com:3306/zzgdata?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.datasource.password=4cc60e9657fff442
+spring.datasource.username=zzgdata
+
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.type-aliases-package=com.zzg.vscodedemo.domain
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+logging.level.com.baomidou.mybatisplus=DEBUG
+logging.level.com.test.mapper=DEBUG
+
+
 
 
