--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,12 @@ mybatis-plus.type-aliases-package=com.zzg.vscodedemo.domain
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.baomidou.mybatisplus=DEBUG
 logging.level.com.test.mapper=DEBUG
+#redis
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.host=480b23d5d2fd.c.methodot.com
+spring.redis.port=33132
 
 
 
